--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>cokolwiek</h1>
+    <header>
+		<div class="head1">
+			cokolwiek
+		</div>
+		<div class="head2">
+			chwilowy opis stronki
+		</div>
+	</header>
+	<nav class="menu">
+		<a href="index.html">Strona główna</a>
+		<a href="newsletter.html">Newsletter</a>
+		<a href="about.html">O nas</a>
+		<div class="menu-log">
+			<a href="#login">LOGIN</a>
+		</div>
+	</nav>
+	<main class="body_sec">
+		<section id="Content">
+			<h3>main</h3>
+		</section>
+	</main>
+	<footer>stopka</footer>
 </body>
 </html>
