--- a/index.html
+++ b/index.html
@@ -3,23 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>VinylowniaPL</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-	<nav class="menu">
-		<a href="index.html">Strona główna</a>
-		<a href="newsletter.html">Newsletter</a>
-		<a href="about.html">O nas</a>
-		<div class="menu-log">
-			<a href="#login">LOGIN</a>
-		</div>
-	</nav>
-	<main class="body_sec">
-		<section id="Content">
+<body id="body1">
+    <nav class="navigation">
+        <span class="logo">VinylowniaPL&trade;</span>
+        <ul class="menu">
+          <li class="menu__item"><a href="index.html">Strona główna</a></li>
+          <li class="menu__item"><a href="newsletter.html">Nasz newsletter</a></li>
+          <li class="menu__item"><a href="index.html">O nas</a></li>
+        </ul>
+      </nav>
+<main>
+	<section class="body_sec">
+		<div id="Content">
 			<h3>main</h3>
-		</section>
-	</main>
-	<footer>stopka</footer>
+		</div>
+</section>
+</main>
+<footer>stopka</footer>
 </body>
 </html>
